# automat

./: Cargo.toml  Dockerfile  README.md
src/: main.rs  repl.rs  scanner.rs  token.rs  tokenizer.rs
src/cmd/: filter.rs
tests/: cli.rs  tests.rs
tests/cmd/: filter.rs
