[package]
name = "automat"
version = "0.0.7"
authors = ["Ömür Özkir <oemuer.oezkir@gmail.com>"]
edition = "2018"
description = "Data wrangling from the command line"
license = "Unlicense/MIT"
readme = "README.md"
repository = "https://github.com/oem/automat"

[[bin]]
name = "atm"
path = "src/main.rs"

[dependencies]
structopt = "0.3.13"
csv = "1.1"
regex = "1"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1"
tempfile = "3"
