[package]
authors = ["Ömür Özkir <oemuer.oezkir@gmail.com>"]
description = "Data wrangling from the command line"
edition = "2018"
license = "Unlicense/MIT"
name = "automat"
readme = "README.md"
repository = "https://github.com/oem/automat"
version = "0.0.8"

[[bin]]
name = "atm"
path = "src/main.rs"

[dependencies]
csv = "1.1"
regex = "1"
structopt = "0.3.13"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1"
tempfile = "3"
