[package]
authors = ["Ömür Özkir <oemuer.oezkir@gmail.com>"]
description = "A Vector Programming Language"
edition = "2021"
license = "Unlicense/MIT"
name = "automat"
readme = "README.md"
repository = "https://github.com/oem/automat"
version = "0.1.0"

[[bin]]
name = "atm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = [ "derive"] }
csv = "1.1"
regex = "1"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "1"
tempfile = "3"
